--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,8 +2,12 @@ FROM malice/kibana:base
 
 LABEL maintainer "https://github.com/blacktop"
 
-RUN apk add --no-cache git ca-certificates
-RUN npm install -g sao template-kibana-plugin
+ENV LANG=C.UTF-8
+ENV PATH=${PATH}:${JAVA_HOME}/bin:/home/kibana/kibana/bin:${PATH}
+
+RUN apk add --no-cache git openjdk8-jre ca-certificates bash
+# RUN npm install -g npm
+# RUN npm install -g sao template-kibana-plugin
 
 WORKDIR /home/kibana/kibana
 
