--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           paths:
             - /caches/app.tar
       - run:
-          name: Run malware test
+          name: Run image tests
           command: |
             set -x
             echo "make tests"
