--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
           no_output_timeout: 1m
           command: |
             set -x
-            docker run --rm app npm run test:quick
+            docker run --rm app npm run test:quick --force
       # - deploy:
       #     name: Push application Docker image
       #     command: |
